--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "Libs/glm"]
 	path = Libs/glm
-	url = https://github.com/g-truc/glm
+	url = https://github.com/g-truc/glm
 [submodule "Libs/glfw"]
 	path = Libs/glfw
 	url = https://github.com/glfw/glfw
